--- a/Projekt-programowanie/Projekt-programowanie.csproj
+++ b/Projekt-programowanie/Projekt-programowanie.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Projekt_programowanie-7b12562e-6948-4cbb-bd0f-be5ecdba74a2</UserSecretsId>
-    <RootNamespace>Projekt_programowanie</RootNamespace>
+    <RootNamespace>ProjektProgramowanie</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,11 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11"/>
   </ItemGroup>
 
 </Project>
