--- a/Projekt-programowanie/Projekt-programowanie.csproj
+++ b/Projekt-programowanie/Projekt-programowanie.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="28.1.36" />
   </ItemGroup>
 
 </Project>
